--- a/smhrd/package.json
+++ b/smhrd/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
+    "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.7",
     "moment": "^2.29.4",
@@ -47,9 +48,9 @@
     },
     "rules": {
       "space-before-function-paren": "off",
-      "no-unused-vars":"off",
-      "no-mixed-spaces-and-tabs":0,
-      "vue/multi-word-component-names":0
+      "no-unused-vars": "off",
+      "no-mixed-spaces-and-tabs": 0,
+      "vue/multi-word-component-names": 0
     }
   },
   "browserslist": [
