--- a/smhrd/package.json
+++ b/smhrd/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
+    "chart.js": "^4.2.1",
     "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.2.0",
     "vue-moment": "^4.1.0",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.0"
