--- a/smhrd/package.json
+++ b/smhrd/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
+    "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
@@ -19,7 +20,8 @@
     "vue-chartjs": "^5.2.0",
     "vue-moment": "^4.1.0",
     "vue-router": "^4.1.6",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
