--- a/smhrd/package.json
+++ b/smhrd/package.json
@@ -16,9 +16,11 @@
     "core-js": "^3.8.3",
     "dayjs": "^1.11.7",
     "moment": "^2.29.4",
+    "pagination": "^0.4.6",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
     "vue-moment": "^4.1.0",
+    "vue-pagination-2": "^3.1.0",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.0",
     "yarn": "^1.22.19"
