--- a/smhrd/package.json
+++ b/smhrd/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
+    "@vue/composition-api": "^1.7.1",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "connect-history-api-fallback": "^2.0.0",
