--- a/smhrd/package.json
+++ b/smhrd/package.json
@@ -21,6 +21,7 @@
     "vue-chartjs": "^5.2.0",
     "vue-moment": "^4.1.0",
     "vue-router": "^4.1.6",
+    "vue-toast-notification": "^3.1.0",
     "vuex": "^4.0.0",
     "yarn": "^1.22.19"
   },
