--- a/smhrd/package.json
+++ b/smhrd/package.json
@@ -22,6 +22,7 @@
     "vue-moment": "^4.1.0",
     "vue-router": "^4.1.6",
     "vue-toast-notification": "^3.1.0",
+    "vue-toastification": "^1.7.14",
     "vuex": "^4.0.0",
     "yarn": "^1.22.19"
   },
