--- a/smhrd/package.json
+++ b/smhrd/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
+    "@meforma/vue-toaster": "^1.3.0",
     "@vue/composition-api": "^1.7.1",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
@@ -17,10 +18,13 @@
     "core-js": "^3.8.3",
     "dayjs": "^1.11.7",
     "moment": "^2.29.4",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^3.0.2",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
     "vue-moment": "^4.1.0",
     "vue-router": "^4.1.6",
+    "vue-sweetalert2": "^5.0.5",
     "vue-toast-notification": "^3.1.0",
     "vue-toastification": "^1.7.14",
     "vuex": "^4.0.0",
