--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "js-sha256": "^0.9.0",
     "js-sha512": "^0.8.0",
     "libsodium-wrappers": "^0.7.11",
+    "pandas": "^0.0.3",
     "vue-chartjs": "^5.2.0",
     "vue-cryptojs": "^2.3.1"
   }
